--- a/action.yml
+++ b/action.yml
@@ -11,6 +11,10 @@ inputs:
     description: 'GitHub Token'
     required: true
     default: ${{ github.token }}
+  access_token:
+    description: 'GitHub Fine-grained access Token'
+    required: true
+    default: ${{ secrets.access_token }}
   inputFile:
     description: 'Results file from Veracode'
     required: false
