--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@actions/artifact": "^2.1.4",
     "@actions/core": "^1.10.1",
     "axios": "^1.6.8",
+    "diff": "^5.2.0",
     "form-data": "^4.0.0",
     "fs": "^0.0.1-security",
     "sjcl": "^1.0.8",
