--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "diff": "^5.2.0",
     "form-data": "^4.0.0",
     "fs": "^0.0.1-security",
+    "fs-extra": "^11.2.0",
     "octokit": "^3.2.0",
     "sjcl": "^1.0.8",
     "tar": "^6.2.1",
@@ -24,6 +25,8 @@
     "typescript": "^5.4.4"
   },
   "devDependencies": {
+    "@types/diff": "^5.2.1",
+    "@types/fs-extra": "^11.0.4",
     "@types/node": "^20.11.30",
     "@types/sjcl": "^1.0.34",
     "@types/tar": "^6.1.12",
