--- a/action.yml
+++ b/action.yml
@@ -9,11 +9,11 @@ inputs:
     required: true
   token:
     description: 'GitHub Token'
-    required: true
+    required: false
     default: ${{ github.token }}
   access_token:
     description: 'GitHub Fine-grained access Token'
-    required: true
+    required: false
   inputFile:
     description: 'Results file from Veracode'
     required: false
